// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextBestActions component renders correctly 1`] = `
<div>
  <div
    class="Section-root-1 Section-alabaster-3"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-8 Typography-root-11 Typography-underline-13 MuiTypography-h2"
          data-testid="typography"
        >
          MC: nba.title
        </h2>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-19 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root NBACard-root-21 NBACard-clickable-22 ColorPair-root-26 ColorPair-secondary1-48"
              data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"/en/somewhere/\\",\\"label\\":\\"test\\"}"
              href="/en/somewhere/"
              role="button"
              tabindex="0"
            >
              <h4
                class="MuiTypography-root NBACard-title-23 Typography-root-11 MuiTypography-h4"
                data-testid="typography"
              >
                test
              </h4>
              <div
                class="NBACard-body-24"
              />
              <div
                class="NBACard-footer-25"
              >
                <div
                  style="font-size: 1rem;"
                >
                  <span
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-52 Anchorlink AnchorLink-white-54 MuiTypography-colorPrimary"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-icon-56"
                      data-testid="internal"
                      focusable="false"
                    />
                    <span>
                      test
                    </span>
                  </span>
                </div>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
          <div
            class="MuiGrid-root Grid-item-19 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root NBACard-root-21 NBACard-clickable-22 ColorPair-root-26 ColorPair-secondary2-49"
              data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}"
              href="https://www.external.co.uk"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <h4
                class="MuiTypography-root NBACard-title-23 Typography-root-11 MuiTypography-h4"
                data-testid="typography"
              >
                test
              </h4>
              <div
                class="NBACard-body-24"
              >
                I am a subtitle
              </div>
              <div
                class="NBACard-footer-25"
              >
                <div
                  style="font-size: 1rem;"
                >
                  <span
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-52 Anchorlink AnchorLink-white-54 MuiTypography-colorPrimary"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-icon-56"
                      data-testid="internal"
                      focusable="false"
                    />
                    <span>
                      string
                    </span>
                  </span>
                </div>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NextBestActions component renders name with no title 1`] = `
<div>
  <div
    class="Section-root-160 Section-alabaster-162"
  >
    <div
      class="Container-root-168"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-167 Typography-root-170 Typography-underline-172 MuiTypography-h2"
          data-testid="typography"
        >
          MC: nba.title
        </h2>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-178 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root NBACard-root-180 NBACard-clickable-181 ColorPair-root-185 ColorPair-secondary1-207"
              data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":\\"string\\"}"
              href="https://www.external.co.uk"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <h4
                class="MuiTypography-root NBACard-title-182 Typography-root-170 MuiTypography-h4"
                data-testid="typography"
              >
                test name
              </h4>
              <div
                class="NBACard-body-183"
              >
                I am a subtitle
              </div>
              <div
                class="NBACard-footer-184"
              >
                <div
                  style="font-size: 1rem;"
                >
                  <span
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-211 Anchorlink AnchorLink-white-213 MuiTypography-colorPrimary"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="AnchorLink-icon-215"
                      data-testid="internal"
                      focusable="false"
                    />
                    <span>
                      string
                    </span>
                  </span>
                </div>
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NextBestActions component renders with no promo cta 1`] = `
<div>
  <div
    class="Section-root-58 Section-alabaster-60"
  >
    <div
      class="Container-root-66"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-65 Typography-root-68 Typography-underline-70 MuiTypography-h2"
          data-testid="typography"
        >
          MC: nba.title
        </h2>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-76 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <div
              class="NBACard-root-78 ColorPair-root-83 ColorPair-secondary1-105"
              type="button"
            >
              <h4
                class="MuiTypography-root NBACard-title-80 Typography-root-68 MuiTypography-h4"
                data-testid="typography"
              >
                test
              </h4>
              <div
                class="NBACard-body-81"
              >
                I am a subtitle
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NextBestActions component renders with no promo cta label 1`] = `
<div>
  <div
    class="Section-root-109 Section-alabaster-111"
  >
    <div
      class="Container-root-117"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root Section-title-116 Typography-root-119 Typography-underline-121 MuiTypography-h2"
          data-testid="typography"
        >
          MC: nba.title
        </h2>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root Grid-item-127 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-4 MuiGrid-grid-lg-3"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root NBACard-root-129 NBACard-clickable-130 ColorPair-root-134 ColorPair-secondary1-156"
              data-gtm="{\\"id\\":\\"cta-click1\\",\\"action\\":\\"https://www.external.co.uk\\",\\"label\\":null}"
              href="https://www.external.co.uk"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <h4
                class="MuiTypography-root NBACard-title-131 Typography-root-119 MuiTypography-h4"
                data-testid="typography"
              >
                test
              </h4>
              <div
                class="NBACard-body-132"
              >
                I am a subtitle
              </div>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
